; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tlan.c_TLan_tx_timeout.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tlan.c_TLan_tx_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32, i32 }

@TLAN_DEBUG_GNRL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"%s: Transmit timed out.\0A\00", align 1
@TLAN_IGNORE = common dso_local global i32 0, align 4
@jiffies = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @TLan_tx_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @TLan_tx_timeout(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %3 = load i32, i32* @TLAN_DEBUG_GNRL, align 4
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = getelementptr inbounds %struct.net_device, %struct.net_device* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @TLAN_DBG(i32 %3, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = load %struct.net_device*, %struct.net_device** %2, align 8
  %9 = call i32 @TLan_FreeLists(%struct.net_device* %8)
  %10 = load %struct.net_device*, %struct.net_device** %2, align 8
  %11 = call i32 @TLan_ResetLists(%struct.net_device* %10)
  %12 = load %struct.net_device*, %struct.net_device** %2, align 8
  %13 = load i32, i32* @TLAN_IGNORE, align 4
  %14 = call i32 @TLan_ReadAndClearStats(%struct.net_device* %12, i32 %13)
  %15 = load %struct.net_device*, %struct.net_device** %2, align 8
  %16 = call i32 @TLan_ResetAdapter(%struct.net_device* %15)
  %17 = load i32, i32* @jiffies, align 4
  %18 = load %struct.net_device*, %struct.net_device** %2, align 8
  %19 = getelementptr inbounds %struct.net_device, %struct.net_device* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load %struct.net_device*, %struct.net_device** %2, align 8
  %21 = call i32 @netif_wake_queue(%struct.net_device* %20)
  ret void
}

declare dso_local i32 @TLAN_DBG(i32, i8*, i32) #1

declare dso_local i32 @TLan_FreeLists(%struct.net_device*) #1

declare dso_local i32 @TLan_ResetLists(%struct.net_device*) #1

declare dso_local i32 @TLan_ReadAndClearStats(%struct.net_device*, i32) #1

declare dso_local i32 @TLan_ResetAdapter(%struct.net_device*) #1

declare dso_local i32 @netif_wake_queue(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
